Add navigation menu in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<header class="header">
 		<a href=""><img src="" alt="Logo company"></a>
 	</header>
+	
+	<nav class="nav">
+		<ul class="menu">
+			<li>main</li>
+			<li>clients</li>
+			<li>shop</li>
+			<li>about</li>
+		</ul>
+	</nav>
 
 	<main class="main">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iusto suscipit perspiciatis modi molestias id quae fuga, labore esse possimus tempora voluptatibus maxime deleniti, enim architecto. Assumenda aperiam, amet sit.</p>
